# Synthetic-Data

./: .dockerignore  .gitignore  Dockerfile  Elon  README.md  cartesia_service.py  config.py  constants.py  diagram.mmd  docker-compose.yml  example.json  flirt.mmd  graph.py  image.py  imagegenerator.py  imagetry.py  langg copy.py  langg.py  main.ipynb  main.py  main2.py  makefile  md_to_mermaid_converter.ipynb  models.py  nodes.py  numImage.json  prompts.py  prove.py  prove1.py  pyproject.toml  request.py  requests.txt  requirements.txt  schemas_generations.json  seed.json  state.py  success_message.txt  test.py  testing.py
.env/: pyvenv.cfg
Mermaids/: 0355143c-4dae-41f0-a1fa-fa1f3e8f00fe.mmd  137577f7-acaa-483a-9f91-8b4f0fe46b87.mmd  1645883b-cc9f-476a-919d-a31b52e78734.mmd  18a982ec-12de-4922-bfb1-88f6970bebb3.mmd  1e2ccd3c-a74d-4cb4-b95b-9e71551d81f7.mmd  2197a672-8398-4938-acba-9557556ee46d.mmd  21f46c37-b36e-4ee0-9995-a89a317b147e.mmd  22397624-ccde-4bba-add6-fe6b2e576738.mmd  292c4c6e-a1cb-4196-86c0-76eef464c57d.mmd  4ab1014f-af56-4195-bc2a-682f2a079e06.mmd  53177531-4d11-418c-bffc-4b6df77e72a4.mmd  5da2cd3b-ff16-4211-8a6d-69fc8ac5807b.mmd  65b9a693-3449-4b67-8102-4265a0a0f6d4.mmd  766ba14e-a844-4a76-81aa-e8ddae6e9635.mmd  800f8aef-7746-43a9-9214-f3dfe17ba487.mmd  93bbbea4-4a45-4d46-b55b-a97a3662b6c7.mmd  93jnv7sk23hf94n5.mmd  97dc1174-5bce-499d-a566-397c4621b470.mmd  9ceede59-9dcd-4cf1-9b2e-d92c4ed5958f.mmd  9e449b02-2fe3-4ac5-b13e-88ae375aa4ed.mmd  a3e99b50-37ab-4a29-8881-f70d7a19d56d.mmd  a78ec859-3694-45b7-bf7c-89767f681b58.mmd  (+11 more)
src/: config.py  explain.md  (+4 more)
(+59 files in other folders)
