[project]
name = "synthetic-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.26",
    "langchain-core>=0.3.67",
    "langchain-openai>=0.3.24",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "matplotlib>=3.10.3",
    "mermaid-py>=0.8.0",
    "pydantic>=2.11.7",
    "python-to-mermaid>=0.6.0",
]
